# graduationp

./: .bandit  .env.example  .gitignore  .pre-commit-config.yaml  APP_TESTING_REPORT.md  CHANGELOG.md  COMPREHENSIVE_DIFFS.md  CONTRIBUTING.md  GITHUB_SETUP.md  GUI_RESPONSIVENESS_REVIEW.md  GUI_REVIEW_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  ISSUE_P1_HIGH_PRIORITY_FIXES.md  LICENSE  PERFORMANCE.md  PROJECT_CLEANUP_SUMMARY.md  PROJECT_REPORT.md  PROJECT_STRUCTURE.md  QA_REVIEW_DOCUMENTATION_INDEX.md  QA_REVIEW_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  RELEASE_CHECKLIST.md  RELEASE_DECISION.md  RELEASE_v1.0.0_SUMMARY.md  SECURITY.md  UPLOAD_CHECKLIST.md  _diag.py  _diag.txt  _fix_inline_flags.py  bandit_results.json  build.ps1  build_agent.py  build_linux.sh  commit_changes.ps1  diags_test.json  fix_dialogs.py  lint.ps1  linux_requirements.txt  (+20 more)
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  gui-check.yml  quality.yml
app/: __main__.py  __version__.py  application.py
app/ai/: __init__.py  action_record.py  ai_worker.py  chat_context_builder.py  debug.py  event_explainer.py  event_explainer_v3.py  event_explainer_v4.py  event_explainer_v5.py  event_id_knowledge.py  event_rules_engine.py  event_summarizer.py  event_summary_builder.py  groq_smart_assistant.py  local_llm_engine.py  performance.py  report_explainer.py  security_actions.py  security_chatbot.py  security_chatbot_v3.py  security_chatbot_v4.py  url_explainer.py
app/config/: settings.py
app/core/: config.py  container.py  errors.py  interfaces.py  logging_setup.py  logging_setup_refactored.py  perf_monitor.py  realtime_protection.py  resource_monitor.py  result_cache.py  startup_orchestrator.py  startup_orchestrator_refactored.py  types.py  workers.py  workers_refactored.py
app/filefunction/: backend_bridge.py  recovery_controller.py
app/gpu/: __init__.py  telemetry_worker.py
app/infra/: events_windows.py  file_scanner.py  integrations.py  nmap_cli.py  privileges.py  sqlite_repo.py  system_monitor_psutil.py  url_scanner.py  vt_client.py
app/intel/: __init__.py  cache.py  providers.py
app/sandbox/: __init__.py  analyzer_dynamic.py  analyzer_static.py  engines.py  report_builder.py  report_explainer.py  vmware_runner.py
app/sandbox_vmware/: __init__.py  config.py  guest_ui_runner.py  preview_stream.py  report_parser.py  sandbox_controller.py  vmrun_client.py
app/scancenter/: __init__.py  controller.py  groq_explainer.py  history_repo.py  report_schema.py
app/scanning/: __init__.py  clamav_adapter.py  friendly_report.py  installer_autopilot.py  integrated_sandbox.py  report_schema.py  report_writer.py  report_writer_url.py  sandbox_controller.py  sandbox_session.py  scanner_engine.py  scoring.py  static_scan.py  static_scanner.py  url_checker.py  url_external_apis.py  url_multi_engine.py  url_scanner.py  url_scoring.py  window_capture.py  yara_engine.py
app/tests/: test_container.py  test_core.py  test_report_schema_v2.py  test_reporting_policy.py  test_repos.py  test_runtime_policies.py  test_sandbox_report.py  test_scan_contracts.py  test_scoring_policy.py  test_services.py  test_settings_persistence.py  test_smoke.py  test_theme_persistence.py
app/ui/: backend_bridge.py  backend_bridge_refactored.py  gpu_backend.py  gpu_service.py  notification_service.py  sandbox_preview_provider.py  settings_service.py  system_snapshot_service.py
app/utils/: admin.py  diagnostics.py  gpu_manager.py  secure_delete.py  security_info.py  security_snapshot.py
archive/docs/: DELIVERY_SUMMARY.md  FINAL_FIX_SUMMARY.md  HOTFIX_SQLITEREPO.md  ISSUE_P0_GPU_PACKAGE_VALIDATION.md  QML_FIXES_SUMMARY.md  RESPONSIVE_UI_CHANGES.md
archive/reports/: QA_PRODUCTION_HARDENING_REVIEW.md  QA_REVIEW_EXECUTIVE_SUMMARY.txt  RELEASE_READY.md
artifacts/gui/: report.json
backend/: __init__.py  __main__.py  __version__.py  application.py  entrypoint.py  runtime.py
backend/api/: backend_bridge.py  gpu_backend.py  gpu_service.py  notification_manager.py  notification_service.py  sandbox_preview_provider.py  security_controller.py  settings_service.py  system_snapshot_service.py
backend/config/: settings.py
backend/core/: config.py  container.py  logging_setup.py  perf_monitor.py  realtime_protection.py  result_cache.py  startup_orchestrator.py  workers.py
backend/engines/: __init__.py
backend/infra/: events_windows.py  file_scanner.py  integrations.py  nmap_cli.py  sqlite_repo.py  system_monitor_psutil.py
backend/platform/: __init__.py  paths.py
backend/tests/: test_application_close_behavior.py  test_backend_bridge_ai.py  test_container.py  test_core.py  test_decision_alignment.py  test_degraded_states.py  test_diagnostics.py  test_history_data.py  test_history_qml_guards.py  test_linux_amd_gpu.py  test_linux_gpu_normalization.py  test_linux_security_posture.py  test_linux_storage.py  test_modal_dialog_regressions.py  test_platform_paths.py  test_realtime_protection_runtime.py  test_release_polish_guards.py  test_report_schema_v2.py  test_report_writer_truthfulness.py  test_reporting_policy.py  test_repos.py  test_rtp_enforcement_safety.py  test_rtp_preference_persistence.py  test_runtime_policies.py  test_sandbox_report.py  test_scan_contracts.py  test_scancenter_orchestrator.py  test_scoring_policy.py  test_security_toggle_refresh.py  test_services.py  (+6 more)
config/: pyproject.toml  pytest.ini  sentinel.spec  sentinel_gpu_worker.spec  sentinel_url_detonator.spec  vmware.json
docs/: AMD_GPU_MONITORING.md  ARCHITECTURE.md  BUILD_AND_VALIDATION.md  CONTRIBUTING.md  DOCUMENTATION_INDEX.md  FEATURES_AND_WORKFLOWS.md  GETTING_STARTED_NAVIGATION.md  GPU_SUBPROCESS_README.md  PRIVACY.md  QUICKSTART.md  README.md  README_BACKEND.md  SMART_ASSISTANT_VALIDATION.md  USER_MANUAL.md  sandbox_vmware.md
frontend/: __init__.py
payload/: __init__.py
qml/: main.qml
scripts/: build_agent.py  cleanup.ps1  lint.ps1  organize.bat  organize.ps1  print_tree.py  refactor_project.py  run_as_admin.bat  run_dev.py  run_diagnostics.py  run_linux.sh
tools/: gui_probe.py  qml_lint.py
(+445 files in other folders)
